--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TBD.",
   "main": "cypress.config.js",
   "devDependencies": {
+    "@cypress/grep": "^3.1.5",
     "@faker-js/faker": "^8.0.2",
     "cypress": "^12.15.0",
     "cypress-iframe": "^1.0.1",
